--- a/Assessment-Test/Assessment-Test.DAL/Assessment-Test.DAL.csproj
+++ b/Assessment-Test/Assessment-Test.DAL/Assessment-Test.DAL.csproj
@@ -41,8 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DBEntities\ActivePromotionRule.cs" />
+    <Compile Include="DBEntities\ItemMaster.cs" />
+    <Compile Include="DBEntities\PromotionRuleType.cs" />
+    <Compile Include="Implementation\ItemHardCodedDAL.cs" />
+    <Compile Include="Interface\IItemDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Assessment-Test.Common\Assessment-Test.Common.csproj">
+      <Project>{08bb1751-072f-4c78-a876-5943a0d860b3}</Project>
+      <Name>Assessment-Test.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
